tests/compile_fail/int_vs_text.stderr
error[E0277]: the trait bound `Int: Compatible<drizzle::core::types::Text>` is not satisfied
  --> tests/compile_fail/int_vs_text.rs:17:16
   |
17 |     let _ = eq(user.id, "hello");
   |             -- ^^^^^^^ the trait `Compatible<drizzle::core::types::Text>` is not implemented for `Int`
   |             |
   |             required by a bound introduced by this call
   |
   = help: the following other types implement trait `Compatible<Rhs>`:
             `Int` implements `Compatible<Double>`
             `Int` implements `Compatible<Float>`
             `Int` implements `Compatible<drizzle::core::types::Any>`
             `Int` implements `Compatible<drizzle::core::types::BigInt>`
             `Int` implements `Compatible<drizzle::core::types::SmallInt>`
note: required by a bound in `drizzle::core::expr::eq`
  --> core/src/expr/cmp.rs
   |
   | pub fn eq<'a, V, L, R>(left: L, right: R) -> SQLExpr<'a, V, Bool, NonNull, Scalar>
   |        -- required by a bound in this function
...
   |     L::SQLType: Compatible<R::SQLType>,
   |                 ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `eq`
